# Personal-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY_RECALL_OPTIMIZATION_PLAN.md  PERSONAL_AGENT_OPTIMIZATION_PLAN.md  PROJECT_CONTEXT.md  PROJECT_HANDOFF.md  README.md  pyproject.toml  start_personal_agent.bat  开发任务编排层后续代办清单.md  开发任务编排层近期收尾方案.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
personal_agent/: app.py  artifact_drafts.py  artifact_export.py  artifact_generation.py  artifact_quality.py  bootstrap.py  capabilities.py  cli.py  content_guard.py  context_builder.py  conversation_evidence.py  dev_task_trace.py  dev_tasks.py  document_intent.py  input_documents.py  intent_router.py  knowledge_learning.py  knowledge_recall.py  learning_reflector.py  learning_signal.py  policy_guard.py  routes.py  runtime.py  skill_reflector.py  skill_registry.py  skill_runtime.py  skill_update_candidates.py  source_semantic_model.py  template_loader.py
personal_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_conversation_evidence.py  test_personal_agent_api.py  test_personal_artifact_drafts.py  test_personal_artifact_export.py  test_personal_artifact_quality.py  test_personal_dev_tasks.py  test_personal_forbidden_scan.py  test_personal_input_sources.py  test_personal_intent_router.py  test_personal_learning_knowledge.py  test_personal_llm_artifact_generation.py  test_personal_llm_error_notice.py  test_personal_memory_recall.py  test_personal_phase5_code_linkage.py  (+1 more)
(+201 files in other folders)
